# psychic-happiness

./: README.md  pyproject.toml
docs/: pawzn-priority-1-remediation.md
examples/: deep_team_slate.json  sample_slate.json
skills/nano-banana-ads-prompts/: SKILL.md
src/sports_betting_agent/: __init__.py  agent.py  cli.py  models.py  odds.py  team_research.py
tests/: test_agent.py
