[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-betting-agent"
version = "0.1.0"
description = "Responsible sports betting analysis agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Psychic Happiness" }]
license = { text = "MIT" }

[project.scripts]
sports-betting-agent = "sports_betting_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
